Update website after 20 months

--- a/about.html
+++ b/about.html
@@ -85,10 +85,10 @@
     </div>
   </section>
   <section class="code-intro">
-    <h4>code</h4>
+    <h4>Code</h4>
     <p>
       I have been a coordinator of the <a href="http://facebook.com/wing.iitmandi">Website Information and Networks Group</a>
-      (WING) at IIT Mandi for about 2 years, where I learnt interesting cool stuff about computers and the Web. I program mainly in
+      (WING) at IIT Mandi for over 2 years, where I learnt interesting cool stuff about computers and the Web. I program mainly in
       C#.NET, Ruby and JavaScript.
     </p>
     <div class="code pane">
@@ -100,10 +100,12 @@
     </div>
   </section>
 </main>
+
     <footer>
-  <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  Last Updated - <b>2014-02-15</b>.
+  <b>&copy; 2013-2015</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
+  Last Updated - <b>2015-10-19</b>.
 </footer>
+
 
     <script type="text/javascript">
         $(document).ready(function() {
