--- a/blog.html
+++ b/blog.html
@@ -68,9 +68,10 @@
   </div>
 </main>
     <footer>
-  <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  Last Updated - <b>2014-02-15</b>.
+  <b>&copy; 2013-2015</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
+  Last Updated - <b>2015-10-19</b>.
 </footer>
+
 
     <script type="text/javascript">
         $(document).ready(function() {
