--- a/index.html
+++ b/index.html
@@ -67,19 +67,21 @@
   <section class="hello-intro">
     <h3 class="tagline">Computer Enthusiast / Gamer / Foodie<br/>Jack of All Trades, Master of None</h3>
     <p>
-      <strong>Hey, Hi and Hello!</strong> I am a 21-year old Computer Science Undergraduate
-      in <strong><a href="http://iitmandi.ac.in">IIT Mandi</a></strong> (living in Kolkata).
-      I am passionate about Web Technologies, and also enjoy Programming, Football, Puzzles, Action Movies and Pop Music.
+      <strong>Hey, Hi and Hello!</strong> I am a 23-year old Computer Science Graduate from
+      <strong><a href="http://iitmandi.ac.in">IIT Mandi</a></strong> (living in Hyderabad).
+      I am passionate about Web and Mobile Technologies, and also enjoy Football, Puzzles, Action Movies and Pop Music.
       I'm glad you visited my website. Have a look around.
     </p>
     <p>
       I'm always looking for ideas that might make my work more creative. In my free time, I read developers' blogs and
       build sotware that is easy to use. I derive inspiration from popular music, and love listening to Internet Radio.
+      My professional interests include Software Engineering, Machine Learning, Security and Big Data. I love Hackathons.
     </p>
     <p>
-      I have recently undertaken an internship with <strong><a href="http://microsoft.com">Microsoft</a></strong> IDC (Hyderabad),
-      in <strong><a href="http://bing.com">Bing</a></strong> Tech-Segments, who have gladly extended a full-time offer to me.
-      I am currently involved in building an open-source framework,
+      I have currently working at <strong><a href="http://microsoft.com">Microsoft</a></strong> IDC (Hyderabad),
+      in <strong><a href="http://bing.com">Bing</a></strong> Entity Experiences, where I work on building compelling
+      experiences using the Satori Knowledge Graph.
+      I am also currently involved in building an open-source framework,
       <strong><a href="https://github.com/Abhra1992/hazelward">HazelWard</a></strong> for NVIDIA CUDA,
       and am looking for contributors for the same.
     </p>
@@ -103,9 +105,10 @@
 </main>
 
     <footer>
-  <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  Last Updated - <b>2014-02-15</b>.
+  <b>&copy; 2013-2015</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
+  Last Updated - <b>2015-10-19</b>.
 </footer>
+
 
     <script type="text/javascript">
         $(document).ready(function() {
