--- a/middleman.html
+++ b/middleman.html
@@ -1,26 +1,25 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="content-language" content="en-in">
-    <meta name="title" content="Welcome to Middleman" />
-    <meta name="author" content="Abhra Basak" />
-    <meta name="description" content="Abhra Basak's Personal Website" />
-    <meta name="copyright" content="Abhra Basak, 2013" />
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Welcome to Middleman | ABHRA BASAK</title>
+  <meta charset="utf-8">
+  <!-- Always force latest IE rendering engine or request Chrome Frame -->
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="content-language" content="en-in">
+  <meta name="title" content="Welcome to Middleman" />
+  <meta name="author" content="Abhra Basak" />
+  <meta name="description" content="Abhra Basak's Personal Website" />
+  <meta name="copyright" content="Abhra Basak, 2013" />
+  <!-- Use title if it's in the page YAML frontmatter -->
+  <title>Welcome to Middleman | ABHRA BASAK</title>
 
-    <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
-    
+  <link href="assets/stylesheets/application.css?1446097635" rel="stylesheet" />
 
-    <script src="/assets/javascripts/application.js" type="text/javascript"></script>
-    
+  <script src="assets/javascripts/application.js?1446097640"></script>
 
-    <link href="/assets/images/me.png" rel="icon" type="image/png" />
-  </head>
+  <link href="assets/images/me.png?1445253376" rel="icon" type="image/png" />
+</head>
+
 
   <body class="middleman">
     <header>
@@ -65,7 +64,7 @@
 </div><!-- .welcome -->
     <footer>
   <b>&copy; 2013-2015</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  Last Updated - <b>2015-10-19</b>.
+  Last Updated - <b>2015-10-29</b>.
 </footer>
 
 
