Deactivate relative assets

--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@
   <!-- Use title if it's in the page YAML frontmatter -->
   <title>About | ABHRA BASAK</title>
 
-  <link href="assets/stylesheets/application.css?1446097635" rel="stylesheet" />
-  <link href="assets/stylesheets/about.css?1446097634" rel="stylesheet" /><link href="assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
+  <link href="/assets/stylesheets/application.css?1446097635" rel="stylesheet" />
+  <link href="/assets/stylesheets/about.css?1446097634" rel="stylesheet" /><link href="/assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
 
-  <script src="assets/javascripts/application.js?1446097640"></script>
+  <script src="/assets/javascripts/application.js?1446097640"></script>
 
-  <link href="assets/images/me.png?1445253376" rel="icon" type="image/png" />
+  <link href="/assets/images/me.png?1445253376" rel="icon" type="image/png" />
 </head>
 
 
