--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,12 @@
   <!-- Use title if it's in the page YAML frontmatter -->
   <title>Contact | ABHRA BASAK</title>
 
-  <link href="assets/stylesheets/application.css?1446097635" rel="stylesheet" />
-  <link href="assets/stylesheets/contact.css?1445253434" rel="stylesheet" /><link href="assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
+  <link href="/assets/stylesheets/application.css?1446097635" rel="stylesheet" />
+  <link href="/assets/stylesheets/contact.css?1445253434" rel="stylesheet" /><link href="/assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
 
-  <script src="assets/javascripts/application.js?1446097640"></script>
+  <script src="/assets/javascripts/application.js?1446097640"></script>
 
-  <link href="assets/images/me.png?1445253376" rel="icon" type="image/png" />
+  <link href="/assets/images/me.png?1445253376" rel="icon" type="image/png" />
 </head>
 
 
@@ -86,7 +86,7 @@
 
   </section>
   <section class="email">
-  <a class="mail-logo" href="mailto:me@abhra.in"><img src="assets/images/mail.png?1445253376" /></a>
+  <a class="mail-logo" href="mailto:me@abhra.in"><img src="/assets/images/mail.png?1445253376" /></a>
 </section>
 
 </main>
