--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <!-- Use title if it's in the page YAML frontmatter -->
   <title>Home | ABHRA BASAK</title>
 
-  <link href="assets/stylesheets/application.css?1446097635" rel="stylesheet" />
-  <link href="assets/stylesheets/home.css?1445253434" rel="stylesheet" /><link href="assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
+  <link href="/assets/stylesheets/application.css?1446097635" rel="stylesheet" />
+  <link href="/assets/stylesheets/home.css?1445253434" rel="stylesheet" /><link href="/assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
 
-  <script src="assets/javascripts/application.js?1446097640"></script>
+  <script src="/assets/javascripts/application.js?1446097640"></script>
 
-  <link href="assets/images/me.png?1445253376" rel="icon" type="image/png" />
+  <link href="/assets/images/me.png?1445253376" rel="icon" type="image/png" />
 </head>
 
 
@@ -59,7 +59,7 @@
 </header>
     <main class="home view">
   <section class="display-pic">
-    <img alt="This is how I look" src="assets/images/photo.jpg?1445253376" />
+    <img alt="This is how I look" src="/assets/images/photo.jpg?1445253376" />
   </section>
   <section class="hello-intro">
     <h3 class="tagline">Computer Enthusiast / Gamer / Foodie<br/>Jack of All Trades, Master of None</h3>
