--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <title>About | ABHRA BASAK</title>
 
   <link href="/assets/stylesheets/application.css?1446097635" rel="stylesheet" />
-  <link href="/assets/stylesheets/about.css?1446097634" rel="stylesheet" /><link href="/assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
+  <link href="/assets/stylesheets/about.css?1446097634" rel="stylesheet" /><link href="/assets/stylesheets/webicons.css?1446101237" rel="stylesheet" />
 
   <script src="/assets/javascripts/application.js?1446097640"></script>
 
@@ -68,7 +68,7 @@
   </section>
   <section class="music-intro">
   <h4>Music</h4>
-  <p>An interesting piece of trivia, I'm deeply dedicated to music and mixes. My favorite generes include Pop, Blues, Dance, Pop Rock, Alternative Rock, Indie Rock and Hip-Hop. Find out my favorite artists and tracks in my music profile.
+  <p>An interesting piece of trivia, I'm deeply in love with music and mixes. My favorite generes include Pop, Blues, Dance, Pop Rock, Alternative Rock, Indie Rock and Hip-Hop. Find out my favorite artists and tracks in my music profile.
 </p>
   <div class="music pane">
   <a class="webicon large lastfm" href="https://www.last.fm/user/Abhra1992">Lastfm</a>
