--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Home | ABHRA BASAK</title>
 
   <link href="/assets/stylesheets/application.css?1446097635" rel="stylesheet" />
-  <link href="/assets/stylesheets/home.css?1445253434" rel="stylesheet" /><link href="/assets/stylesheets/webicons.css?1445253376" rel="stylesheet" />
+  <link href="/assets/stylesheets/home.css?1445253434" rel="stylesheet" /><link href="/assets/stylesheets/webicons.css?1446101237" rel="stylesheet" />
 
   <script src="/assets/javascripts/application.js?1446097640"></script>
 
@@ -75,9 +75,9 @@
       My professional interests include Software Engineering, Machine Learning, Security and Big Data. I love Hackathons.
     </p>
     <p>
-      I have currently working at <strong><a href="http://microsoft.com">Microsoft</a></strong> IDC (Hyderabad),
-      in <strong><a href="http://bing.com">Bing</a></strong> Entity Experiences, where I work on building compelling
-      experiences using the Satori Knowledge Graph.
+      I am currently working at <strong><a href="http://microsoft.com">Microsoft</a></strong> IDC (Hyderabad),
+      in <strong><a href="http://bing.com">Bing</a></strong> Entity Experiences, where I build compelling
+      user experiences using the Satori Knowledge Graph.
       I am also currently involved in building an open-source framework,
       <strong><a href="https://github.com/Abhra1992/hazelward">HazelWard</a></strong> for NVIDIA CUDA,
       and am looking for contributors for the same.
